# NewtonBioMorphX

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/Modules/: FindGmsh.cmake
examples/: box_growth.txt  box_tensile_force_spine.txt  cone_growth_elephant_trunk.txt  cone_theta_growth.txt  cylinder_croc.txt  cylinder_theta_growth.txt  disk_growth_to_cone.txt  disk_growth_to_hemisphere.txt  sphere_croissant.txt  sphere_growth.txt  sphere_invagination.txt  sphere_invagination_2.txt  sphere_invagination_hexagon.txt  torus.txt
src/: DataStructure.h  DeviceData.cu  DeviceData.h  DeviceDataPtr.h  DeviceDataPtrManaged.cuh  Expand.h  Kernels.cu  Kernels.h  Main.cu  Managed.h  MeshIO.cu  MeshIO.h  MeshOp.h  MortonKey.cuh  MyGUI.cu  MyGUI.h  Octree.cu  Octree.h  Parameters.h  Primitives.h  SVD3Cuda.h  TextIO.cu  TextIO.h  Typedefs.h  Visualisation.cu  Visualisation.h
src/nvrtc_kernels/: compute_bids_default.cu  compute_critical_timestep_default.cu  compute_for_vis_default.cu  compute_force_default.cu  compute_orthogonal_basis_default.cu  enforceBC_default.cu
